git-annex (4.20130724) UNRELEASED; urgency=low

  * Add status message to XMPP presence tag, to identify to others that
    the client is a git-annex client. Closes: #717652
  * webapp: When creating a repository on a removable drive, set
    core.fsyncobjectfiles, to help prevent data loss when the drive is yanked.
  * Always build with -threaded, to avoid a deadlock when communicating with
    gpg.

 -- Joey Hess <joeyh@debian.org>  Tue, 23 Jul 2013 12:39:48 -0400

git-annex (4.20130723) unstable; urgency=low

  * Fix data loss bug when adding an (uncompressed) tarball of a
    git-annex repository, or other file that begins with something
    that can be mistaken for a git-annex link. Closes: #717456
  * New improved version of the git-annex logo, contributed by
    John Lawrence.
  * Rsync.net have committed to support git-annex and offer a special
    discounted rate for git-annex users. Updated the webapp to reflect this.
    http://www.rsync.net/products/git-annex-pricing.html
  * Install XDG desktop icon files.
  * Support unannex and uninit in direct mode.
  * Support import in direct mode.
  * webapp: Better display of added files.
  * fix: Preserve the original mtime of fixed symlinks.
  * uninit: Preserve .git/annex/objects at the end, if it still
    has content, so that old versions of files and deleted files
    are not deleted. Print a message with some suggested actions.
  * When a transfer is already being run by another process,
    proceed on to the next file, rather than dying.
  * Fix checking when content is present in a non-bare repository
    accessed via http.
  * Display byte sizes with more precision.
  * watcher: Fixed a crash that could occur when a directory was renamed
    or deleted before it could be scanned.
  * watcher: Partially worked around a bug in hinotify, no longer crashes
    if hinotify cannot process a directory (but can't detect changes in it)
  * directory special remote: Fix checking that there is enough disk space